--- a/taks.css
+++ b/taks.css
@@ -129,10 +129,10 @@
           color: red;
           display:table-cell;
            vertical-align:middle;
-           padding-left:2%;
-           min-width:113px;
+           padding-left:21px;
+           
            padding-top:25px;
-           min-width:120px;
+           min-width:104px;
          }
 
 .neirong{
