--- a/taks.css
+++ b/taks.css
@@ -14,9 +14,9 @@
             width:100%;
             }
  .beijing img{ 
- width: 100%;  height:200px;
+ width: 100%;  height:62%;
  overflow:hidden;
- margin-top:12px;
+ margin-top:4%;
 
 
             }      
@@ -38,9 +38,9 @@
        margin-top:-305px;
        }
 .yemian img{
-          width:80px;height:80px;
-          margin-top:190px;
-          margin-left:3%;
+          width:80px;height:85px;
+          margin-top:85px;
+          margin-left:15px;
            }
 .xingming{
           width:115px;
@@ -79,6 +79,7 @@
           color: red;
           float-left;margin-left:21px;
            min-width: 140px;
+           font-weight:bold;
          }
 .zhuanye3{
          width:100%;height:40px;
@@ -143,7 +144,7 @@
           padding-top:27px;
           display:table-cell;
           vertical-align:middle;
-
+          padding-right:8%;
         }
 
 .footer{
@@ -168,7 +169,8 @@
           margin-top:4%;
           } 
 .footer button{
-           margin-left:3%;width:45%;height:100%;
+           margin-left:1%;width:48%;height:100%;
            background-color:#FFF;
-           border:solid 1px #28d7e8;border-radius:5px;
+           border:solid 3px #28d7e8;border-radius:5px; 
+           font-size:1.5rem;
            }
