--- a/taks.css
+++ b/taks.css
@@ -120,7 +120,10 @@
          width:100%;height:200px;
          background-color:#FFF;
          } 
-
+.zhuanye7{
+         width:100%;height:200px;
+         background-color:#FFF;
+         } 
 .jieshao{
                   
           
@@ -130,7 +133,7 @@
            vertical-align:middle;
            padding-left:21px;
            
-           padding-top:25px;
+           padding-top:2px;
            min-width:104px;
          }
 
@@ -139,7 +142,7 @@
           font-size:1rem;
           color: red;
           margin-left:3%;
-          padding-top:27px;
+          padding-top:2px;
           display:table-cell;
           vertical-align:middle;
           padding-right:8%;
@@ -152,23 +155,23 @@
       background-color:#FFF ;
        }
 .xiantiao{
-         width:100%;height:2px; 
-         background-color: #C3a8a8;
+         width:100%;height:1px; 
+         background-color: #C0C0C0;
          } 
 .xiantiao2{
           width:98%;height:1px;
-          background-color:#C3a8a8; 
+          background-color:#C0C0C0; 
           float-left;margin-left:2%; 
           } 
 .xiantiao3{
-          width:98%;height:1px;
-          background-color:#C3a8a8; 
+          width:98%;height:1px;outline:none;
+          background-color:#C0C0C0; 
           float-left;margin-left:2%; 
-          margin-top:4%;
+          margin-top:1%;
           } 
 .footer button{
            margin-left:1%;width:48%;height:85%;
            background-color:#FFF;
            border:solid 3px #28d7e8;border-radius:5px; 
-           font-size:1.5rem;
+           font-size:1.5rem;outline:none;
            }
