--- a/taks.css
+++ b/taks.css
@@ -34,7 +34,7 @@
       min-width: 110px;
        }
 .yemian{
-       width:100%;height:312px;
+       width:100%;height:304px;
        margin-top:-305px;
        }
 .yemian img{
@@ -58,8 +58,9 @@
            margin:auto;margin-left:20px;
           } 
 .jianjie{
-         width:100%;height:35px;
-         background-color: #FFF;         
+         padding:2%;
+         background-color: #FFF;  
+         border-bottom: 1px solid #C0C0C0;       
          }
 .jineng{
         font-size:1rem;
@@ -67,76 +68,82 @@
         min-width: 110px;
         }
 .zhuanye2{
-         width:100%;height:40px;
-         background-color:#FFF;
+background-color:#FFF;
+margin-top: 0px;
          }
+.cnazhu{
+padding: 2%;
+border-bottom: 1px solid #C0C0C0;
+height: 20px;
+        }
 .zhusu{
           
           padding-top:10px;
           font-size:1rem;
           color: red;
-          float-left;margin-left:21px;
+          float-left;margin-left:3px;
            min-width: 140px;
            font-weight:bold;
          }
 .zhuanye3{
-         width:100%;height:40px;
+         width:100%;
          background-color:#FFF;
          }
 .nianxian{
-          
-          padding-top:10px;
           font-size:1rem;
           color: blue;
-          float-left;margin-left:21px;
+          float-left;margin-left:-31px;
            min-width: 150px;  
+           padding: 2%;
+           border-bottom: 1px solid #C0C0C0;
          }
 .zhuanye4{
-         width:100%;height:40px;
-         background-color:#FFF;
+         width:100%;
+         background-color:rgba(255, 255, 255, 0);
+         margin-top:0.6%
          }
 
 .shijian{
-          
-          padding-top:10px;
           font-size:1rem;
           color: #C0C0C0;
-          float-left;margin-left:21px;           
+          float-left;margin-left:-32px;           
            min-width: 140px;
+           padding:2%;
+           border-bottom: 1px solid #C0C0C0;
         }
 .zhuanye5{
-         width:100%;height:40px;
-         background-color:#FFF;
+         width:100%;
+         background-color:rgba(255, 255, 255, 0);
+         margin-top: 0.7%;
          }
 .jiage{
-          
-          padding-top:10px;
           font-size:1rem;
           color: #C0C0C0;
-          float-left;padding-left:21px; 
            min-width: 200px;
+          margin-left: -33px;
+         min-width: 200px;
+        border-bottom: 1px solid #C0C0C0;
+          padding: 2%;
 }
 .zhuanye6{
-         width:100%;height:200px;
-         background-color:#FFF;
-         } 
-.zhuanye7{
-         width:100%;height:200px;
-         background-color:#FFF;
-         } 
+         background-color:rgba(255, 255, 255, 0);
+         margin-top: 0.6%;
+         padding: 2%;
+         margin-left: -56px;
+         border-bottom: 1px solid #C0C0C0;
+         }          
 .jieshao{
-                  
-          
           font-size:1rem;
           color: red;
           display:table-cell;
            vertical-align:middle;
-           padding-left:21px;
-           
+           padding-left:21px;     
            padding-top:2px;
            min-width:104px;
          }
-
+.zhuanye7{
+height: 200px;
+         }  
 .neirong{
           width:100%;
           font-size:1rem;
