--- a/taks.css
+++ b/taks.css
@@ -14,10 +14,10 @@
             width:100%;
             }
  .beijing img{ 
- width: 100%;  height:62%;
+  width:14px;
  overflow:hidden;
- margin-top:4%;
-
+ margin-top:23px;
+margin-left: 2%;
 
             }      
 .jiantou{
@@ -39,19 +39,20 @@
        }
 .yemian img{
           width:80px;height:85px;
-          margin-top:85px;
-          margin-left:15px;
+          margin-top:170px;
+          margin-left:33px;
            }
 .xingming{
           width:115px;
-          margin-top:-65px;
-          margin-left:120px;
+          margin-top:-75px;
+          margin-left:140px;
           font-size:1.3rem;
          }
 .dizhi{
       width:180px;
-      margin-left:100px;
+      margin-left:110px;
       font-size:1.1rem;
+      margin-top: 8px;
       }
 .dizhi img{
            width:15px;height:18px;
